# GameOfLife

./: CMakeLists.txt  README.md  vcpkg.json
include/: GameLife.h
src/: GameLife.cpp  main.cpp
